<resources>
    <string name="app_name">Pizzadom</string>
    <string name="facebook_app_id">1952323635023086</string>
    <string name="action_contacts">action_contacts</string>
    <string name="action_settings">action_settings</string>
    <string name="action_email">send email</string>
    <string name="action_create_order">action_create_order</string>
    <string name="title_activity_screen1">title_activity_screen1</string>
    <string name="title_activity_screen2">title_activity_screen2</string>
    <string name="action_share">action_share</string>
    <string name="title_activity_order">Order food</string>
    <string name="title_activity_contact">Contact details</string>
    <string name="User_details">User detail</string>
    <string name="register">register</string>
    <string name="title_activity_register">Registration</string>
    <string name="yes">yes</string>
    <string name="Ads">Pizzadom Promo</string>
    <string name="deleteContact">deleteContact</string>
    <string name="forgot_password">Reset Password</string>
    <string name="no">no</string>
    <string name="server_client_id">773320327376-ho18hbtb3slnu90fddt7voqgip5m6ds8.apps.googleusercontent.com</string>
    <string name="banner_footer">ca-app-pub-5292757823141716/6968619992</string>
    <string name="user_login">user login</string>
    <string name="where_we_are">where_we_are</string>
    <string name="title_activity_maps">Map of Restaurant</string>
    <string name="title_email">Email</string>
    <string name="action_logout">logout</string>
    <string name="login_here_to_get_started">Login here</string>
    <string name="Proceed_shopping">Go to Shopping</string>
    <string name="checkout">Checkout</string>
    <string name="description_example">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>
    <string name="product_size">Size: 40</string>
    <string name="product_color">Color: Black</string>
    <string name="product_price">Price: 80$</string>
    <string name="action_cart">Shopping cart</string>
    <string name="quantity">1</string>
    <string name="product_name">Sleek black top</string>
    <string name="price">100 $</string>
    <string name="remove_from_cart">Remove</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="sub_total">Sub total:</string>
    <string name="server_error">Failed to payment information to server</string>
    <string name="successful_payment">Payment successfully uploaded</string>
    <string name="pay_with_paypal">Pay with PayPal</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="loading">loading</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
</resources>
